# mela_parser

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BUG_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING_REPORT.md  DEBUG_SUMMARY_FOR_USER.md  DEDUPLICATION_SOLUTION.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  README_BUG_FIX.md  SCHEMA_BASED_FILTERING.md  SECURITY.md  STATUS.md  YOUR_PLAN.md  debug_extraction.py  debug_failures.py  epub.py  image_processor.py  logging_config.py  main.py  main_chapters.py  main_chapters_v2.py  main_delimiter.py  main_overlap.py  main_parallel.py  main_v2.py  parse.py  pyproject.toml  recipe.py  test_extraction.py  test_quality.py  test_recipe_lists.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
debug/: debug.py
docs/: BOUNDARY_EXTRACTION.md  CHAPTER_EXTRACTOR_README.md  EXECUTIVE_SUMMARY.md  INTEGRATION_EXAMPLE.md  PROMPT_DESIGN.md  PROMPT_REFERENCE.md  QUICKSTART.md  QUICK_REFERENCE.md  SPLIT_RECIPE_FIX.md  TESTING.md  mela-file-format.md
docs/archive/: FINAL_RESULTS.md  README_OPTIMIZATION.md  SUMMARY.md  TDD_RESULTS.md  evaluation.md
docs/debugging/: EXACT_CODE_CHANGES.md  FINAL_SUMMARY.txt  FIX_SUMMARY.md  PIPELINE_COMPARISON.md  TOC_BUG_QUICK_REFERENCE.md
docs/implementation/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_V2_SUMMARY.md
docs/testing/: PIPELINE_V2_GUIDE.md
examples/: README.md
scripts/: compare_results.py  examples_pipeline_usage.py  extract_recipes.py  main.py  main_async_chapters.py  main_chapters.py  main_chapters_v2.py  main_delimiter.py  main_overlap.py  main_parallel.py  main_simple_chapters.py  main_v2.py  validate_prompts.py
src/mela_parser/: __init__.py  chapter_extractor.py  cli.py  config.py  converter.py  exceptions.py  image_processor.py  parse.py  pipeline.py  prompt_library.py  protocols.py  recipe.py  repository.py  retry.py  toc_extractor.py  validator.py
src/mela_parser/extractors/: __init__.py  list_based_extractor.py  structured_list.py
src/mela_parser/services/: __init__.py  factory.py  images.py
tests/: __init__.py  conftest.py  example_extraction.py  test_chapter_extractor.py  test_extraction.py  test_list_accuracy.py  test_pipeline_v2.py  test_quality.py  test_recipe_lists.py  test_simple_chapters.py  test_structured_list_extractor.py
tests/unit/: test_chapter_extractor.py  test_cli.py  test_config.py  test_converter.py  test_exceptions.py  test_images.py  test_parse.py  test_pipeline.py  test_protocols.py  test_repository.py  test_retry.py  test_services.py  test_toc_extractor.py  test_validator.py
