[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mela-parser"
version = "0.1.0"
description = "Extract recipes from EPUB cookbooks to Mela format"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Mela Parser Contributors"}
]
keywords = ["recipe", "epub", "parser", "mela", "cookbook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.18",
    "html2text>=2024.2.26",
    "markitdown[all]>=0.1.3",
    "openai>=1.66.3",
    "pillow>=11.1.0",
    "rich>=13.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mela_parser"
Repository = "https://github.com/yourusername/mela_parser.git"
Issues = "https://github.com/yourusername/mela_parser/issues"
Documentation = "https://github.com/yourusername/mela_parser#readme"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.24.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.6",
]

[project.scripts]
mela-parse = "mela_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mela_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "D",     # pydocstyle
    "ANN",   # flake8-annotations
    "PT",    # flake8-pytest-style
    "RUF",   # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module (will add incrementally)
    "D101",  # Missing docstring in public class (will add incrementally)
    "D102",  # Missing docstring in public method (will add incrementally)
    "D103",  # Missing docstring in public function (will add incrementally)
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E501",   # Allow longer lines in tests
    "D",      # Don't require docstrings in tests
    "ANN",    # Don't require type annotations in tests
]
"debug*.py" = [
    "D",      # Don't require docstrings in debug scripts
    "ANN",    # Don't require type annotations in debug scripts
]
"src/mela_parser/prompt_library.py" = [
    "E501",   # Allow longer lines for prompt strings
]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "debug",
    "output",
    "examples",
    "dist",
    "build"
]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
pythonVersion = "3.13"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
